Xcode 10 support - iOS builds
Although xcode 10 support ist currently not claimed, it almost works. There seems to be a mismatch between cmake internal settings and settings from the generated projects.
In the case of crossbuilding (for iOS generic device) we get following error while checking dependecies: "No architectures to compile for (ARCHS=x86_64, VALID_ARCHS=arm64 armv7 armv7s)" within the IDE and the build process stops.
Compilation from the commandline, giving xcodebuild -arch arm64
works without failure.
Within the IDE we find ARCHS being set to x86_64 and VALID_ARCHS set to arm64 armv7 armv7s which matches the error output. Manually changing ARCHS to the desired achitechture results in successful processing (compilation and linking).
We've tried to figure out which setting might be wrong, but had no luck jet. What are we missing?
We're using cmake 3.12.2 with xcode 10.0 beta on macOS High Sierra 10.13.6 on a Mac mini.
Any help welcome.
Thanks in advance.