Xcode: Explicitly turn off signing in try_compile projects

Fixes: #18407, #20571, #20688